--- a/笔记/3.react组件.md
+++ b/笔记/3.react组件.md
@@ -6,7 +6,6 @@
 - 约定1 :函数名称必须以大写字母开头
 - 约定2 :函数组件必须有返回值,表示该组件的结构
 - 如果返回值为null ,表示不渲染任何内容
-- 
 - 没有生命周期,也会被更新并挂载,但是没有生命周期函数;
 - 没有this(组件实例) ;
 - 没有内部状态( state) ;
@@ -30,10 +29,15 @@
 - 约定2 :类组件应该继承React.Component父类,从而可以使用父类中提供的方法或属性
 - 约定3 :类组件必须提供render()方法
 - 约定4 : render() 方法必须有返回值,表示该组件的结构
+- 约定5：this.state维护组件内部的数据
 
 ```jsx
 <script type="text/babel">
   class Hello extends React.Component {
+    constructor(props) {
+      super(props)
+      this.state = {}
+    }
     render() {
     	return (<h1>Hello Class</h1>)
     }
@@ -47,6 +51,7 @@
 
 #### 2.1父传子组件通信
 
+- 单向数据流，`props`不可被子组件直接修改
 - 父组件通过属性=值的形式来传递给子组件数据;
 - 子组件通过props参数获取父组件传递过来的数据;
 
@@ -57,14 +62,14 @@
 ### 3.跨组件通信
 
 - React提供了一个API : Context ;
-- Context提供了一种在组件之间共享此类值的方式,而不必显式地通过组件树的逐层传递props ; 
+- Context提供了一种在组件之间共享此类值的方式,而不必显式地通过组件树的逐层传递props ;
 - Context设计目的是为了共享那些对于一个组件树而言是“全局”的数据,例如当前认证的用户、主题或首选语言;
 
 #### 3.1React.createContext
 
-- 创建一个需要共享的Context对象 : 
+- 创建一个需要共享的Context对象 :
 - 如果一个组件订阅了Context ,那么这个组件会从离自身最近的那个匹配的Provider中读取到当前的context值;
--  defaultValue是组件在顶层查找过程中没有找到对应的Provider ,那么就使用默认值
+- defaultValue是组件在顶层查找过程中没有找到对应的Provider ,那么就使用默认值
 
 ```js
 const UserContext = React.createContext({
@@ -133,9 +138,7 @@ function ProfileHeader() {
 - setState设计为异步,可以显著的提升性能;
 
   - 如果每次调用setState都进行一次更新 ,那么意味着render函数会被频繁调用,界面重新渲染,这样效率是很低的;
-
   - 最好的办法应该是获取到多个更新,之后进行批量更新;
-
 - 如果同步更新了state ,但是还没有执行render函数,那么state和props不能保持同步;
 
   - state和props不能保持一致性,会在开发中产生很多的问题;
@@ -163,7 +166,7 @@ setTimeout(() => {
 }, 0)
 ```
 
-- 放在` componentDidMount()`使用原生DOM获取标签
+- 放在 ` componentDidMount()`使用原生DOM获取标签
 
 ```js
 <button id="btn">改文本2</button>
@@ -205,19 +208,19 @@ const eventBus = new EventEmitter()
 - 方式一：传入字符串
   - 使用时通过this.refs.传入的字符串格式获取对应的元素;
 - 方式二：传入一个对象(推荐方式)
-  - 对象是通过React.createRef()方式创建出来的; 
-  - 使用时获取到创建的对象其中有一个current属性就是对应的元素; 
+  - 对象是通过React.createRef()方式创建出来的;
+  - 使用时获取到创建的对象其中有一个current属性就是对应的元素;
 - 方式三：传入一个函数
   - 该函数会在DOM被挂载时进行回调,这个函数会传入-个元素对象,我们可以自己保存;
   - 使用时,直接拿到之前保存的元素对象即可;
 - 当ref属性用于HTML元素时,构造函数中使用React.createRef() 创建的ref 接收底层DOM元素作为其current属性;
 - 当ref属性用于自定义class 组件时, ref 对象接收组件的挂载实例作为其current属性;
-- 你**不能在函数组件上使用ref属性**,因为他们没有实例; 
+- 你**不能在函数组件上使用ref属性**,因为他们没有实例;
 
 ### 9.受控组件
 
-- 在React中, HTML表单`form`的处理方式和普通的DOM元素不太一样：表单元素通常会保存在一些内部的state。
-- 在HTML中,表单元素(如<input>、<textarea> 和<select> )之类的表单元素通常自己维护state ,并根据用户输入进行更新 
+- 在React中, HTML表单 `form`的处理方式和普通的DOM元素不太一样：表单元素通常会保存在一些内部的state。
+- 在HTML中,表单元素(如`<input>`、`<textarea>` 和`<select>` )之类的表单元素通常自己维护state ,并根据用户输入进行更新
 - 而在React中,可变状态( mutable state )通常保存在组件的state 属性中,并且只能通过使用setState0来更新。
   - 我们将两者结合起来,使React的state成为"唯一数据源”;
   - 渲染表单的React组件还控制着用户输入过程中表单发生的操作;
@@ -236,8 +239,8 @@ const eventBus = new EventEmitter()
 ### 12.Portals的使用
 
 - 某些情况下,我们希望渲染的内容独立于父组件,甚至是独立于当前挂载到的DOM元素中(默认都是挂载到id为root的DOM元素上）
-
 - Portal提供了一种将子节点渲染到存在于父组件以外的DOM节点的优秀的方案:
+
   - 第一个参数( child )是任何可渲染的React子元素,例如一个元素 ,字符串或fragment ;
   - 第二个参数( container )是一个DOM元素;
 
@@ -248,7 +251,6 @@ ReactDOM.createPortal (child,， container)
 ### 13.*Fragment*的使用
 
 - 代替最外层的div
-
 - 在短语中不能添加任何属性
 
 ```jsx
@@ -274,7 +276,7 @@ ReactDOM.createPortal (child,， container)
 
 - 与Fragment 一样, StrictMode不会渲染任何可见的UI ;
 - 它为其后代元素触发额外的检查和警告;
-- 严格模式检查仅在开发模式下运行;它们不会影响生产构建; 
+- 严格模式检查仅在开发模式下运行;它们不会影响生产构建;
 
 #### 14.1检查什么
 
